Clean cpp files code

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,12 +7,12 @@
 EditorStartupMap=/Game/Maps/Turtles.Turtles
 LocalMapOptions=
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Turtles.Turtles
-ServerDefaultMap=/Engine/Maps/Entry
+ServerDefaultMap=None
 GlobalDefaultGameMode=/Game/Blueprints/Game/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
 
